@@ -73,6 +73,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLS\CmdArgs.vb" />
     <Compile Include="CLS\ConsoleUtil.vb" />
     <Compile Include="CLS\CryptoUtil.vb" />
     <Compile Include="CLS\DateTimeUtil.vb" />
